measure named cluster agent turns